Archive2/c6/c21f3287e78b22/output
main.cpp:5:16: error: declaration of 'i' [-fpermissive]
     enum { i = 2 };
                ^
main.cpp:1:8: error: changes meaning of 'i' from '<anonymous enum> i' [-fpermissive]
 enum { i = 1 };
        ^
